@@ -21,12 +21,13 @@ package org.apache.james.transport.mailets;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Arrays;
 import java.util.HashSet;
 
-import javax.mail.MessagingException;
-import javax.mail.internet.MimeMessage;
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.MimeMessage;
 
 import org.apache.http.NameValuePair;
 import org.apache.http.client.methods.CloseableHttpResponse;
@@ -82,8 +83,8 @@ public class HeadersToHTTP extends GenericMailet {
             try {
                 // targetUrl = targetUrl + ( targetUrl.contains("?") ? "&" :
                 // "?") + parameterKey + "=" + parameterValue;
-                url = new URL(targetUrl).toExternalForm();
-            } catch (MalformedURLException e) {
+                url = new URI(targetUrl).toURL().toExternalForm();
+            } catch (MalformedURLException | URISyntaxException e) {
                 throw new MessagingException(
                         "Unable to contruct URL object from url");
             }
