@@ -28,7 +28,7 @@ import static org.apache.james.jmap.JMAPTestingConstants.DOMAIN;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 
@@ -39,6 +39,7 @@ import org.apache.james.MemoryJamesConfiguration;
 import org.apache.james.MemoryJamesServerMain;
 import org.apache.james.core.MailAddress;
 import org.apache.james.core.Username;
+import org.apache.james.jmap.JmapGuiceProbe;
 import org.apache.james.jmap.api.filtering.FilteringManagement;
 import org.apache.james.jmap.api.filtering.Rule;
 import org.apache.james.jmap.api.filtering.Rules;
@@ -51,7 +52,6 @@ import org.apache.james.jmap.api.model.PushSubscription;
 import org.apache.james.jmap.api.model.PushSubscriptionCreationRequest;
 import org.apache.james.jmap.api.model.PushSubscriptionServerURL;
 import org.apache.james.jmap.api.pushsubscription.PushSubscriptionRepository;
-import org.apache.james.jmap.draft.JmapGuiceProbe;
 import org.apache.james.mailbox.model.MailboxACL;
 import org.apache.james.mailbox.model.MailboxPath;
 import org.apache.james.modules.ACLProbeImpl;
@@ -67,17 +67,15 @@ import org.apache.james.webadmin.WebAdminUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
-import org.testcontainers.shaded.com.google.common.collect.ImmutableList;
 
+import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import com.google.inject.multibindings.Multibinder;
 
 import io.restassured.specification.RequestSpecification;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import scala.None;
 import scala.Option;
-import scala.collection.immutable.Seq;
 
 class MemoryUserDeletionIntegrationTest {
     public static class MemoryUserDeletionIntegrationTestProbe implements GuiceProbe {
@@ -242,12 +240,12 @@ class MemoryUserDeletionIntegrationTest {
 
     @Test
     void shouldDeleteFilters(GuiceJamesServer server) {
-        Rule.Condition CONDITION = Rule.Condition.of(Rule.Condition.Field.CC, Rule.Condition.Comparator.CONTAINS, "something");
-        Rule.Action ACTION = Rule.Action.of(Rule.Action.AppendInMailboxes.withMailboxIds("id-01"));
-        Rule.Builder RULE_BUILDER = Rule.builder().name("A name").conditionGroup(CONDITION).action(ACTION);
-        Rule RULE_1 = RULE_BUILDER.id(Rule.Id.of("1")).build();
+        Rule.Condition condition = Rule.Condition.of(Rule.Condition.Field.CC, Rule.Condition.Comparator.CONTAINS, "something");
+        Rule.Action action = Rule.Action.of(Rule.Action.AppendInMailboxes.withMailboxIds("id-01"));
+        Rule.Builder ruleBuilder = Rule.builder().name("A name").conditionGroup(condition).action(action);
+        Rule rule1 = ruleBuilder.id(Rule.Id.of("1")).build();
         server.getProbe(MemoryUserDeletionIntegrationTestProbe.class)
-            .defineFilters(ALICE, ImmutableList.of(RULE_1));
+            .defineFilters(ALICE, ImmutableList.of(rule1));
 
         String taskId = webAdminApi
             .queryParam("action", "deleteData")
@@ -290,7 +288,7 @@ class MemoryUserDeletionIntegrationTest {
         server.getProbe(MemoryUserDeletionIntegrationTestProbe.class)
             .addPushSubscriptions(ALICE, new PushSubscriptionCreationRequest(
                 "device",
-                new PushSubscriptionServerURL(new URL("http://whatever/toto")),
+                new PushSubscriptionServerURL(new URI("http://whatever/toto").toURL()),
                 Option.empty(),
                 Option.empty(),
                 PushSubscriptionCreationRequest.noTypes()));
